# otus_homework_06

./: CMakeLists.txt  Doxyfile  README.md  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _r_e_a_d_m_e_8md.html  annotated.html  assignments.h  assignments_8h.html  assignments_8h__dep__incl.map  assignments_8h__dep__incl.md5  assignments_8h_source.html  bulk.cpp  bulk.h  classbulk_1_1_handler-members.html  classbulk_1_1_handler.html  classbulk_1_1_state_base-members.html  classbulk_1_1_state_base.html  classbulk_1_1_state_base__inherit__graph.map  classbulk_1_1_state_base__inherit__graph.md5  classbulk_1_1_state_dynamic-members.html  classbulk_1_1_state_dynamic.html  classbulk_1_1_state_empty-members.html  classbulk_1_1_state_empty.html  classbulk_1_1_state_static-members.html  classbulk_1_1_state_static.html  classes.html  classlogger_1_1_console-members.html  classlogger_1_1_console.html  classlogger_1_1_console__coll__graph.map  classlogger_1_1_console__coll__graph.md5  classlogger_1_1_console__inherit__graph.md5  classlogger_1_1_i_logger-members.html  classlogger_1_1_i_logger.html  classlogger_1_1_i_logger__inherit__graph.map  classlogger_1_1_i_logger__inherit__graph.md5  classlogger_1_1_log_file-members.html  classlogger_1_1_log_file.html  classlogger_1_1_log_file__coll__graph.md5  classlogger_1_1_log_file__inherit__graph.map  (+70 more)
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_f.js  classes_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+8 more)
(+1 files in other folders)
